index file modified

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <!--- navbar started------>
+
     <div class="navbar bg-base-100 bg-primary ">
         <div class="flex-1">
           <a class="btn btn-ghost text-xl text-white">Buy Sells Corner</a>
@@ -40,11 +42,12 @@
             </li>
               <li><a>Login</a></li>
               <li><a>Register</a></li>
-              <li><a>Logout</a></li>
             </ul>
           </div>
         </div>
       </div>
+
+          <!--- navbar ended------>
     <div class="container">
         <h2>All Products</h2>
         <div id="products-list"></div>
@@ -52,7 +55,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./config.js"></script>
-    <script src="./app.js"></script>
+    <script type="module" src="./config.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
