--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="./config.js"></script>
+    <script type="module" src="./firebase-config.js"></script>
     <script type="module" src="login.js"></script>
 </body>
 </html>
