--- a/post-ad.html
+++ b/post-ad.html
@@ -60,7 +60,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="./config.js"></script>
+    <script type="module" src="./firebase-config.js"></script>
     <script type="module" src="post-ad.js"></script>
 </body>
 </html>
