--- a/register.html
+++ b/register.html
@@ -106,16 +106,9 @@
       </div>
       </div>
 </form>
-        <!-- Firebase SDK -->
-        <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js"></script>
     
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="./config.js"></script>
+    <script type="module" src="./firebase-config.js"></script>
     <script type="module" src="register.js"></script>
 </body>
 </html>
