--- a/single-ad.html
+++ b/single-ad.html
@@ -55,7 +55,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" src="./config.js"></script>
+    <script type="module" src="./firebase-config.js"></script>
     <script type="module" src="single-ad.js"></script>
 </body>
 </html>
