blogging app completed

--- a/register.html
+++ b/register.html
@@ -40,26 +40,13 @@
                   <span class="badge">New</span>
                 </a>
             </li>
-              <li><a>Login</a></li>
-              <li><a>Register</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./register.html">Register</a></li>
             </ul>
           </div>
         </div>
       </div>
       
-          <!--- navbar ended------>
-          <!-- <div class="container">
-            <h2>Register</h2>
-            <form id="register-form">
-                <input type="text" id="first-name" placeholder="First Name" required />
-                <input type="text" id="last-name" placeholder="Last Name" required />
-                <input type="email" id="email" placeholder="Email" required />
-                <input type="password" id="password" placeholder="Password" required />
-                <input type="file" id="profile-picture" accept="image/*" required />
-                <button type="submit">Register</button>
-            </form>
-        </div> -->
-    
         <h1 class="text-center mt-5 text-[4rem] font-semibold">Registration</h1>
         <form>
         <div class="container bg-[#fff6f6] border rounded-box m-5">
