--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                   <span class="badge">New</span>
                 </a>
             </li>
-              <li><a>Login</a></li>
-              <li><a>Register</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./register.html">Register</a></li>
             </ul>
           </div>
         </div>
@@ -49,8 +49,8 @@
 
           <!--- navbar ended------>
     <div class="container">
-        <h2>All Products</h2>
-        <div id="products-list"></div>
+      <h1 class="text-center mt-5 text-[4rem] font-semibold">All Products</h1>
+      <div id="products-list"></div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
