--- a/login.html
+++ b/login.html
@@ -40,22 +40,48 @@
                   <span class="badge">New</span>
                 </a>
             </li>
-              <li><a>Login</a></li>
-              <li><a>Register</a></li>
+              <li><a href="./login.html">Login</a></li>
+              <li><a href="./register.html">Register</a></li>
             </ul>
           </div>
         </div>
       </div>
       
           <!--- navbar ended------>
-    <div class="container">
-        <h2>Login</h2>
-        <form id="login-form">
-            <input type="text" id="login-email" placeholder="Email" required />
-            <input type="password" id="login-password" placeholder="Password" required />
-            <button type="submit">Login</button>
-        </form>
-    </div>
+          <h1 class="text-center mt-5 text-[4rem] font-semibold">Log in</h1>
+          <form>
+          <div class="container bg-[#fff6f6] border rounded-box m-5">
+            <div class="flex flex-col flex-wrap m-5 p-5 gap-5">
+              <label class="input input-bordered flex items-center gap-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  class="h-4 w-4 opacity-70">
+                  <path
+                    d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                  <path
+                    d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+                </svg>
+                <input type="text" class="grow" id="email" placeholder="Email" />
+              </label>
+              <label class="input input-bordered flex items-center gap-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 16 16"
+                  fill="currentColor"
+                  class="h-4 w-4 opacity-70">
+                  <path
+                    fill-rule="evenodd"
+                    d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                    clip-rule="evenodd" />
+                </svg>
+                <input type="password" class="grow" id="password" value="password" />
+              </label>
+              <button class="btn btn-primary flex justify-center mt-5 text-xl"><a href="./login.html"></a>Login</button>
+            </div>
+            </div>
+      </form>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
