--- a/post-ad.html
+++ b/post-ad.html
@@ -35,13 +35,13 @@
               tabindex="0"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
               <li>
-                <a class="justify-between">
+                <a href="./register.html" class="justify-between">
                   Profile
                   <span class="badge">New</span>
                 </a>
             </li>
-              <li><a>Register</a></li>
-              <li><a>Logout</a></li>
+              <li><a href="./single-ad.html">Single Ad</a></li>
+              <li><a href="./index.html">Logout</a></li>
             </ul>
           </div>
         </div>
