--- a/single-ad.html
+++ b/single-ad.html
@@ -40,8 +40,8 @@
                   <span class="badge">New</span>
                 </a>
             </li>
-              <li><a>Register</a></li>
-              <li><a>Logout</a></li>
+              <li><a href="./post-ad.html">Post Ad</a></li>
+              <li><a href="./index.html">Logout</a></li>
             </ul>
           </div>
         </div>
