index file modified

--- a/post-ad.html
+++ b/post-ad.html
@@ -11,7 +11,7 @@
 
      <div class="navbar bg-base-100 bg-primary ">
         <div class="flex-1">
-          <a class="btn btn-ghost text-xl text-white">Buy Sells Corner</a>
+          <a class="btn btn-ghost text-xl text-white" href="./index.html">Buy Sells Corner</a>
         </div> 
         <div class="flex-none">
           <div class="dropdown dropdown-end">
