--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 
      <div class="navbar bg-base-100 bg-primary ">
         <div class="flex-1">
-          <a class="btn btn-ghost text-xl text-white">Buy Sells Corner</a>
+          <a class="btn btn-ghost text-xl text-white" href="./index.html">Buy Sells Corner</a>
         </div> 
         <div class="flex-none">
           <div class="dropdown dropdown-end">
@@ -35,7 +35,7 @@
               tabindex="0"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
               <li>
-                <a class="justify-between">
+                <a href="./register.html" class="justify-between">
                   Profile
                   <span class="badge">New</span>
                 </a>
